--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "libback"]
 	path = libback
 	url = git@bitbucket.org:clarkok/libback.git
+[submodule "test/googletest"]
+	path = test/googletest
+	url = https://github.com/google/googletest.git
+[submodule "third-party/rlutil"]
+	path = third-party/rlutil
+	url = https://github.com/tapio/rlutil
