--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(${PROJECT_SOURCE_DIR}/lib)
 
-set(PROJECT_SRCS main.cpp)
+set(PROJECT_SRCS main.cpp lib_functions.cpp)
 add_executable(cyanc ${PROJECT_SRCS})
 
 target_link_libraries(cyanc cyan)
